# isaac_devkit packaging metadata + tool configuration.
#
# Install model is MOUNT, not pip install (ADR-0017 section 2): the
# workspace mount delivers framework/ into the container and PYTHONPATH
# (wired in config/docker/setup.conf [environment]) makes
# `import isaac_devkit` resolve. This file is never used to bake the
# package into an image; it exists for metadata, version, and as the
# single home for ruff / coverage configuration.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-devkit"
# Tracks the repo git tag (ADR-0017 section 3). No tag exists yet; the
# first release is v1.0.0 at the MVP gate (PRD A6). Pre-release
# placeholder until then; keep in sync with isaac_devkit.__version__.
version = "0.1.0"
description = "Mounted Isaac Sim robot-simulation framework (pure/Isaac split, import-safe on hosts without Isaac Sim)."
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["isaac_devkit*"]

# ADR-0017 section 8 / PRD A1: module-top imports of Isaac modules are
# forbidden package-wide; every Isaac import must be function-local.
# TID253 catches try/except-disguised module-top imports that the
# runtime import-safety test alone might miss.
[tool.ruff.lint]
extend-select = ["TID253"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = ["omni", "pxr", "isaacsim"]

# ADR-0017 section 7: coverage counts the framework pure surface;
# Isaac-side function-local code is excluded via this config block
# (source scope / exclude_also regexes), never via inline
# coverage-ignore comments. The exclude_also regexes and the committed
# --cov-fail-under ratchet baseline land in the integrate step.
[tool.coverage.run]
source = ["isaac_devkit"]
