<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_app_cpp</name>
  <version>0.1.0</version>
  <description>
    App-side ament_cmake template for the base-repo ROS 2 example. Ships
    the consumer-facing counterpart to the Isaac driver in C++: a camera
    subscriber and a /cmd_vel publisher. Copy this package, rename it, and
    replace the node bodies with your application logic.
  </description>
  <maintainer email="ycpss91255@gmail.com">cyc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
