<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_app_py</name>
  <version>0.1.0</version>
  <description>
    App-side ament_python template for the base-repo ROS 2 example. Ships
    the consumer-facing counterpart to the Isaac driver: a camera
    subscriber and a /cmd_vel publisher. Copy this package, rename it, and
    replace the node bodies with your application logic.
  </description>
  <maintainer email="ycpss91255@gmail.com">cyc</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
